fixing alignment of hidden filters and events on events list page

--- a/app/assets/stylesheets/events.css
+++ b/app/assets/stylesheets/events.css
@@ -3,11 +3,12 @@
 /* events list and event */
 #events_list {
 	list-style-type: none;
-	margin: 3em 0 0 1em;
+	padding-left:0;
+	margin-top: 3em;
 }
 
 .event {
-	width: 70em;
+	width: 100%;
 	height: 10.7em;
 	margin-bottom: 2em;
 	cursor: pointer;
@@ -89,7 +90,7 @@
 
 .toggleMoreFilters {
 	float: right;
-	margin: -1em 1.3em 0 0;
+	margin-right: 1em;
 	color: #007acc;
 }
 
@@ -109,13 +110,42 @@
 	border-radius: 4px;
 	color: #555 !important;
 	border: 1px solid #c6c6c6 !important;
+	max-width: 16.8em;
 }
 
 p.title {
 	font-size: 1.2em;
-	margin: 1em 0 -1em 1.8em;
+	margin: 1em 0 -1em 1em;
 }
 
 #search-filter-div {
 	margin-left: 1em;
+}
+
+.btn-gender {
+	min-width: 14.5em;
+	max-width: 14.5em;
+	min-height: 2.45em;
+}
+
+.date-picker-width {
+	max-width: 14.5em;
+}
+
+.btn-height {
+	min-height: 2.45em;
+}
+
+.col-md-2-4 {
+	position: relative;
+	min-height: 1px;
+	padding-right: 15px;
+	padding-left: 15px;
+	width: 20%;
+}
+
+@media (min-width: 992px) {
+	.col-md-2-4 {
+		float: left;
+	}
 }
